# Lobster

./: .gitignore  LICENSE  README.md  build.sh  gen_table_eval_time.sh  gen_table_rewriting.sh  gen_table_syntactic.sh
homomorphic_evaluation/mc_parser/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  command.cpp  gen_table.sh  main.cpp  mc_driver.cpp  mc_driver.hpp
homomorphic_evaluation/mc_parser/paper_bench/: bar.eqn_opted_result  bsort.eqn  bsort.eqn_opted_result  bsort.eqn_opted_result_baseline  cardio.eqn_opted_result  cardio.eqn_opted_result_baseline  cavlc.eqn  cavlc.eqn_opted_result  cavlc.eqn_opted_result_baseline  ctrl.eqn_opted_result  ctrl.eqn_opted_result_baseline  dec.eqn_opted_result  dsort.eqn  dsort.eqn_opted_result  dsort.eqn_opted_result_baseline  hd02.eqn  hd04.eqn  hd04.eqn_opted_result  hd04.eqn_opted_result_baseline  hd05.eqn_opted_result  hd06.eqn_opted_result  hd07.eqn_opted_result  hd08.eqn_opted_result  hd09.eqn_opted_result  hd11.eqn_opted_result  hd12.eqn_opted_result  hd12.eqn_opted_result_baseline  i2c.eqn  i2c.eqn_opted_result  i2c.eqn_opted_result_baseline  int2float.eqn  int2float.eqn_opted_result  int2float.eqn_opted_result_baseline  isort.eqn_opted_result  isort.eqn_opted_result_baseline  msort.eqn_opted_result  msort.eqn_opted_result_baseline  osort.eqn_opted_result  osort.eqn_opted_result_baseline  router.eqn_opted_result  (+1 more)
homomorphic_evaluation/mc_parser/paper_result/: bar_opted_result  cardio  cardio_opted_result  cardio_opted_result_baseline  cavlc_opted_result_baseline  ctrl_opted_result  dsort  hd06  hd10  (+25 more)
(+902 files in other folders)
